[project]
name = "showhowto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops==0.8.0",
    "kornia==0.7.4",
    "markupsafe<3.0.2",
    "omegaconf==2.3.0",
    "open-clip-torch==2.22.0",
    "pillow>=11.0.0",
    "timm==1.0.11",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "transformers==4.46.3",
]
